logo on mobile fixes

--- a/css/style.css
+++ b/css/style.css
@@ -322,19 +322,7 @@ body {
   .nav-links{
     display: none;
   }
-  .logo-wrapper {
-  height: 100px;            /* The visible height you want */
-  width: auto;
-  overflow: hidden;        
-  display: flex;
-  align-items: center;    
-}
 
-.logo {
-  height: 130px;            
-  object-fit: contain;     
-  display: block;
-}
 }
 
 /* ------------- SECCIÓN “Nuestros Servicios” ------------- */
